--- a/styles.css
+++ b/styles.css
@@ -24,26 +24,48 @@
   margin: 0 auto;
   padding: 0;
   box-sizing: border-box;
-  scroll-behavior: smooth;
-  
+  scroll-behavior: smooth; 
 }
+body{
+  background-color: var(--light-grey);
+}
+
+.cont-height-1{
+  height: 600px;
+}
+.cont-height-2 {
+  height: 900px;
+}
+.cont-height-3{
+  height: 1000px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 /*Btn arrow*/
 .btn-arrow{
   position: sticky;
   bottom: 0px;
-  display: flex;
-  justify-content: end;
+}
+.sticky-nav{
+  position: sticky;
+  top: 0px;
+  background-color: var(--light-grey);
+  z-index: 1;
 }
 
-.row-navbar{
-  padding-top: 48px;
+.he-nav{
+  height: 10vh;
 }
-
 .navbar-br{
   font-family: var(--font-primary);
   font-weight: 400;
   font-size: 24px;
   color: var(--black);
+}
+.nav-ul{
+  margin-bottom: 0px;
 }
 .nav-ul li a{
   font-family: var(--font-secondary);
@@ -56,12 +78,6 @@
 }
 
 /*header*/
-.col-header{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-}
 .header-text h1{
   font-size: 82px;
   font-family: var(--font-primary);
@@ -79,17 +95,11 @@
   padding: 10px 22px;
   border-radius: 40px;
   border: none;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 14px;
   width: 290px;
   height: 70px;
   box-shadow: 0px 4px 45px 0px #0000002E;
-
 }
-.cta span{
+.cta span, .cta-2 span, .cta-3 span{
   color: var(--brown);
   font-family: var(--font-secondary);
   font-weight: 600;
@@ -100,17 +110,10 @@
   width:50px;
   height: 50px;
   border-radius: 34px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.header-text{
-  position: absolute;
 }
 .header-img{
-  left: 36%;
-  top: 10%;
-  position: relative;
+  width: 100%;
+  height: 300px;
 }
 .header-img img {
   max-width: 100%;
@@ -120,9 +123,6 @@
 /*********************section 2***************************/
 .col-services{
   height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
   background-image: url("/assets/img/section-2-bg.png");
   background-repeat: no-repeat;
 }
@@ -132,24 +132,9 @@
   font-weight: 400;
   color: var(--brown);
 }
-.srv-flex{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-
-}
 .cards-flex{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   width: 268px;
   height: 416px;
-}
-.cards-text{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 24px;
 }
 .cards-text-flex{
   text-align: center;
@@ -184,4 +169,60 @@
   position: absolute;
   left: 0;
   bottom: 0;
+}
+
+/************section 3 products******************/
+
+.prod-text h3{
+  font-family: var(--font-primary);
+  color: var(--brown);
+  font-size: 40px;
+  font-weight: 400;
+}
+.prod-text p{
+  font-family: var(--font-secondary);
+  color: var(--black);
+  font-size: 24px;
+  font-weight: 400;
+}
+.bold{
+  color: var(--brown)
+}
+.cta-2{
+  background-color: var(--white) !important;
+  padding: 10px 22px;
+  border-radius: 40px;
+  border: none;
+  width: 200px;
+  height: 70px;
+  box-shadow: 0px 4px 45px 0px #0000002E;
+}
+
+/*****************section 4 - about me*********************/
+.about-text h3{
+  font-family: var(--font-primary);
+  font-size: 82px;
+  color: var(--brown);
+  margin: 0;
+}
+.about-text h4{
+  font-family: var(--font-primary);
+  font-size: 32px;
+  color: var(--light-brown);
+  margin: 0;
+}
+.about-text p{
+  font-family: var(--font-secondary);
+  font-size: 20px;
+  color: var(--black);
+}
+.cta-3{
+  background-color: var(--white) !important;
+  padding: 10px 22px;
+  border-radius: 40px;
+  border: none;
+  width: 215px;
+  height: 70px;
+  box-shadow: 0px 4px 45px 0px #0000002E;
+
 }
