--- a/styles.css
+++ b/styles.css
@@ -304,12 +304,31 @@ body{
 /************   testimonials    *************/
 
 .cont-height-6{
-  height: 560px;
   background-image: url("./assets/img/Testimonials.png");
   background-repeat: no-repeat;
   background-position-x: center;
   background-position-y: center;
+  height: 500px;
 }
+
+.test-text{
+  font-family: var(--font-primary);
+  color: var(--brown);
+  font-size: 40px;
+  text-align: center;
+}
+.test-client{
+  font-family: var(--font-secondary);
+  color:var(--black);
+  font-size: 20px;
+  margin:0;
+}
+.circle-icon{
+  background-color: var(--brown);
+  border-radius: 50px;
+  padding: 20px 25px;
+}
+
 
 /************   appointment    *************/
 .bg-appo{
