--- a/css/header.css
+++ b/css/header.css
@@ -1,44 +1,108 @@
 /************   header   *************/
-
+.header-flex{
+  display: flex;
+  align-items: center;
+  height: 85vh !important;
+}
 .header-text h1{
-    font-size: 82px;
     font-family: var(--font-primary);
     font-weight: 400;
     color: var(--brown);
   }
   .header-text p{
-    font-size: 20px;
     font-family: var(--font-secondary);
     font-weight: 400;
     color: black;
+    font-size: 1rem; 
   }
   .cta{
     background-color: var(--white) !important;
     padding: 10px 22px;
     border-radius: 40px;
     border: none;
-    width: 290px;
-    height: 70px;
+    max-width: 18.125rem; /*290px;*/
+    height: 4.375rem; /*70px*/
     box-shadow: 0px 4px 45px 0px #0000002E;
+    font-size: 1rem;
   }
   
   .cta span, .cta-2 span, .cta-3 span{
     color: var(--brown);
     font-family: var(--font-secondary);
     font-weight: 600;
-    font-size: 18px;
   }
   .cta-arrow{
     background-color: var(--light-brown);
-    width:50px;
-    height: 50px;
+    width: 3.125rem; /*50px*/
+    height: 3.125rem;
     border-radius: 34px;
-  }
-  .header-img{
-    width: 100%;
-    height: 300px;
   }
   .header-img img {
     max-width: 100%;
     height: auto;
   }
+
+@media (width < 575.99px){
+  .header-img{
+    display: none;
+  }
+  .header-flex{
+    justify-content: center;
+  }
+  .header-text h1{
+    font-size: 3rem; 
+  }
+  .cta-arrow{
+    width: 2.5rem;
+    height: 2.5rem;
+  }
+}
+
+@media (min-width: 576px) and (max-width: 991.99px){
+  .header-img{
+    display: none;
+  }
+  .header-flex{
+    justify-content: center;
+  }
+  .header-text h1{
+    font-size: 4rem; 
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1199.99px){
+  .header-img{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .header-text h1{
+    font-size: 4.125rem; 
+  }
+  .cta-arrow{
+    width: 2.8rem;
+    height: 2.8rem;
+  }
+}
+
+@media (width > 1200px){
+  .header-img{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .header-text h1{
+    font-size: 4.5rem; 
+  }
+  
+  .header-text p{
+    font-size: 1.25rem; /* 20px */
+  }
+  
+  .cta span, .cta-2 span, .cta-3 span{
+    font-size: 1.125rem; /* 18px */
+  }
+  
+}
