--- a/css/header.css
+++ b/css/header.css
@@ -101,7 +101,7 @@
     font-size: 1.25rem; /* 20px */
   }
   
-  .cta span, .cta-2 span, .cta-3 span{
+  .cta span, .cta-3 span{
     font-size: 1.125rem; /* 18px */
   }
   
