--- a/css/about-me.css
+++ b/css/about-me.css
@@ -1,27 +1,28 @@
 /************   about-me    *************/
 
-
 .cont-about{
-    background-image: url("../assets/img/about-me-bg.png");
-    background-repeat: no-repeat;
-    background-position-x: right;
-    background-position-y: top;
-  }
+  min-height: 100vh;
+  padding: 3rem; 
+}
+.about-flex{
+  display: flex;
+  align-items: center;
+}
   .about-text h3{
     font-family: var(--font-primary);
-    font-size: 82px;
+    font-size: 5.125rem;
     color: var(--brown);
     margin: 0;
   }
   .about-text h4{
     font-family: var(--font-primary);
-    font-size: 32px;
+    font-size: 2rem;
     color: var(--light-brown);
     margin: 0;
   }
   .about-text p{
     font-family: var(--font-secondary);
-    font-size: 20px;
+    font-size: 1.25rem;
     color: var(--black);
   }
   .cta-3{
@@ -34,3 +35,34 @@
     box-shadow: 0px 4px 45px 0px #0000002E;
   
   }
+
+  /* Responsive */
+@media (max-width: 575.99px) {
+  .about-flex{
+    flex-direction: column;
+  }
+  .about-text h3{
+    font-size:3.25rem;
+  }
+  .about-text h4{
+    font-size: 1.25rem;
+  }
+  .about-text p{
+    font-size: 1rem;
+  }
+}
+
+@media (min-width: 576px) and (max-width: 991.99px) {
+  .about-flex{
+    flex-direction: column;
+  }
+  .about-text h3{
+    font-size: 4.5rem;
+  }
+  .about-text h4{
+    font-size: 1.375rem;
+  }
+  .about-text p{
+    font-size: 1.125rem;
+  }
+}
