--- a/css/about.css
+++ b/css/about.css
@@ -1,24 +1,34 @@
 /************   about    *************/
 
-
 .cont-height-4{
     background-color: var(--light-brown);
     background-image: url("../assets/img/circles.png");
     background-repeat: no-repeat;
     background-position-y: bottom;
     background-size: contain;
-    height: 500px;
+    min-height: 100vh;
   }
   .text-p{
-    width:860px;
+    width: 80%;
     text-align: center;
   }
   .text-p p{
     font-family: var(--font-primary);
     font-size: 40px;
     color: var(--white);
-    
   }
   .text-p span{
-    color:var(--brown);
+    color: var(--brown);
   }
+  /* Responsive */
+@media (max-width: 575.99px) {
+  .text-p p{
+    font-size: 1.25rem;
+  }
+}
+
+@media (min-width: 576px) and (max-width: 991.99px) {
+  .text-p p{
+    font-size: 1.875rem;
+  }
+}
