--- a/css/services.css
+++ b/css/services.css
@@ -5,14 +5,6 @@
   padding: 4rem 0rem;
 }
 
-.col-services {
-  min-height: 100vh; /* Cambiado a min-height para mejor comportamiento */
-  background-image: url("../assets/img/section-2-bg.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-}
-
 .services-title {
   font-family: var(--font-primary);
   font-size: 4rem; 
@@ -70,12 +62,12 @@
   bottom: 0;
 }
 
-/* Responsivo */
+/* Responsive */
 @media (max-width: 575.99px) {
   .srv-flex {
       flex-direction: column;
       align-items: center;
-      gap: 2rem; /* Ajustado */
+      gap: 2rem; 
   }
   .services-title {
     font-size: 2rem; 
@@ -86,8 +78,8 @@
   .srv-flex {
       flex-direction: column;
       align-items: center;
-      gap: 2rem; /* Ajustado */
-  }
+      gap: 2rem; 
+    }
   .services-title {
     font-size: 3rem; 
   }
