--- a/css/footer.css
+++ b/css/footer.css
@@ -1,21 +1,27 @@
 /************   footer    *************/
 
-
 .foo-cont{
-    min-height: 560px;
+    min-height: 90vh;
     background-color: var(--brown);
+    padding: 4rem;
   }
   .logo-foo{
     font-family: var(--font-primary);
-    font-size: 36px;
+    font-size: 2.25rem; /*36px;*/
     color: var(--white);
     width: 300px;
     line-height: 1.4;
   }
+  .ul-flex{
+    display:flex;
+    flex-direction:row;
+    justify-content: space-between;
+    gap:2rem;
+  }
   .bold-footer{
     font-family: var(--font-secondary);
     color: #A87A7A;
-    font-size: 20px;
+    font-size: 1.25rem; /*20px;*/
     font-weight: 600;
     text-transform: uppercase;
   }
@@ -26,7 +32,7 @@
     font-family: var(--font-secondary);
     color: #DFD4D1;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 1.25rem; /*20px;*/
     text-transform: capitalize;
     text-decoration: none;
     list-style-type: none;
@@ -38,7 +44,7 @@
   .rg-fo p{
     text-align: center;
     font-family: var(--font-secondary);
-    font-size: 20px;
+    font-size: 1.25rem; /*20px;*/
     color: var(--white);
     font-weight: 400;
   }
@@ -47,3 +53,28 @@
     display: flex;
     align-items: center;
   }
+
+/* Responsive */
+@media (max-width: 575.99px) {
+  .logo-foo{
+    font-size: 1.625; /*26px;*/
+  }
+  .bold-footer ,.light-footer a, .light-footer, .rg-fo p{
+    font-size: 1rem;
+  }
+  .ul-flex{
+    flex-direction: column;
+  }
+}
+
+@media (min-width: 576px) and (max-width: 991.99px) {
+  .logo-foo{
+    font-size: 1.625rem; /*26px;*/
+  }
+  .bold-footer ,.light-footer a, .light-footer, .rg-fo p{
+    font-size: 1.2rem;
+  }
+  .ul-flex{
+    flex-direction: column;
+  }
+}
