--- a/css/testimonials.css
+++ b/css/testimonials.css
@@ -5,23 +5,42 @@
     background-repeat: no-repeat;
     background-position-x: center;
     background-position-y: center;
-    height: 500px;
+    min-height: 100vh;
   }
   
   .test-text{
     font-family: var(--font-primary);
     color: var(--brown);
-    font-size: 40px;
+    font-size: 2.5rem; /*40px;*/
     text-align: center;
   }
   .test-client{
     font-family: var(--font-secondary);
     color:var(--black);
-    font-size: 20px;
-    margin:0;
+    font-size: 2rem; /*32px;*/
+    margin: 0;
   }
   .circle-icon{
     background-color: var(--brown);
     border-radius: 50px;
     padding: 12px;
   }
+
+/* Responsive */
+@media (max-width: 575.99px) {
+  .test-text{
+    font-size: 1.5rem; /*24px;*/
+  }
+  .test-client{
+    font-size: 1rem; /*16px;*/
+  }
+}
+
+@media (min-width: 576px) and (max-width: 991.99px) {
+  .test-text{
+    font-size: 2.2rem; /*35.2px;*/
+  }
+  .test-client{
+    font-size: 1.075rem; /*17.2px;*/
+  }
+}
