--- a/css/header.css
+++ b/css/header.css
@@ -1,47 +1,50 @@
 /************   header   *************/
+
 .header-flex{
   display: flex;
   align-items: center;
   height: 85vh !important;
 }
 .header-text h1{
-    font-family: var(--font-primary);
-    font-weight: 400;
-    color: var(--brown);
-  }
-  .header-text p{
-    font-family: var(--font-secondary);
-    font-weight: 400;
-    color: black;
-    font-size: 1rem; 
-  }
-  .cta{
-    background-color: var(--white) !important;
-    padding: 10px 22px;
-    border-radius: 40px;
-    border: none;
-    max-width: 18.125rem; /*290px;*/
-    height: 4.375rem; /*70px*/
-    box-shadow: 0px 4px 45px 0px #0000002E;
-    font-size: 1rem;
-  }
+  font-family: var(--font-primary);
+  font-weight: 400;
+  color: var(--brown);
+}
+.header-text p{
+  font-family: var(--font-secondary);
+  font-weight: 400;
+  color: black; 
+}
+.cta{
+  background-color: var(--white) !important;
+  padding: 10px 22px;
+  border-radius: 40px;
+  border: none;
+  max-width: 18.125rem; /*290px;*/
+  height: 4.375rem; /*70px*/
+  box-shadow: 0px 4px 45px 0px #0000002E;
+  font-size: 1rem;
+}
   
-  .cta span, .cta-2 span, .cta-3 span{
-    color: var(--brown);
-    font-family: var(--font-secondary);
-    font-weight: 600;
-  }
-  .cta-arrow{
-    background-color: var(--light-brown);
-    width: 3.125rem; /*50px*/
-    height: 3.125rem;
-    border-radius: 34px;
-  }
-  .header-img img {
-    max-width: 100%;
-    height: auto;
-  }
-
+.cta span, .cta-2 span, .cta-3 span{
+  color: var(--brown);
+  font-family: var(--font-secondary);
+  font-weight: 600;
+}
+.cta-arrow{
+  background-color: var(--light-brown);
+  width: 3.125rem; /*50px*/
+  height: 3.125rem;
+  border-radius: 34px;
+}
+.header-img img {
+  max-width: 100%;
+  height: auto;
+}
+.modal-title{
+  margin: 0 !important;
+}
+/*Responsive*/
 @media (width < 575.99px){
   .header-img{
     display: none;
@@ -56,6 +59,13 @@
     width: 2.5rem;
     height: 2.5rem;
   }
+  .header-text p{
+    font-size: 1.125rem; /* 18px */
+  }
+  
+  .cta span, .cta-3 span{
+    font-size: 1rem; /* 16px */
+  }
 }
 
 @media (min-width: 576px) and (max-width: 991.99px){
@@ -66,7 +76,14 @@
     justify-content: center;
   }
   .header-text h1{
-    font-size: 4rem; 
+    font-size: 3.438rem; /*55px*/ 
+  }
+  .header-text p{
+    font-size: 1.125rem; /* 18px */
+  }
+  
+  .cta span, .cta-3 span{
+    font-size: 1rem; /* 16px */
   }
 }
 
@@ -78,15 +95,22 @@
     align-items: center;
   }
   .header-text h1{
-    font-size: 4.125rem; 
+    font-size: 3.75rem; /*60px*/
   }
   .cta-arrow{
     width: 2.8rem;
     height: 2.8rem;
   }
+  .header-text p{
+    font-size: 1.125rem; /* 18px */
+  }
+  
+  .cta span, .cta-3 span{
+    font-size: 1rem; /* 16px */
+  }
 }
 
-@media (width > 1200px){
+@media (min-width: 1200px) and (max-width: 1399.99px) {
   .header-img{
     width: 100%;
     display: flex;
@@ -94,7 +118,7 @@
     align-items: center;
   }
   .header-text h1{
-    font-size: 4.5rem; 
+    font-size: 4.063rem; /*65px*/
   }
   
   .header-text p{
@@ -104,5 +128,24 @@
   .cta span, .cta-3 span{
     font-size: 1.125rem; /* 18px */
   }
+}
+
+@media (min-width: 1400px) {
+  .header-img{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .header-text h1{
+    font-size: 4.5rem; /*72px*/
+  }
   
+  .header-text p{
+    font-size: 1.25rem; /* 20px */
+  }
+  
+  .cta span, .cta-3 span{
+    font-size: 1.125rem; /* 18px */
+  }
 }
