--- a/css/products.css
+++ b/css/products.css
@@ -15,23 +15,18 @@
 .prod-text h3 {
   font-family: var(--font-primary);
   color: var(--brown);
-  font-size: 2.5rem;
   font-weight: 400;
   line-height: 1.8; 
 }
-
 .prod-text p {
   font-family: var(--font-secondary);
   color: var(--black);
-  font-size: 1.3rem;
   font-weight: 400;
   line-height: 1.5; 
 }
-
 .bold {
   color: var(--brown);
 }
-
 .cta-2 {
   background-color: var(--white) !important;
   padding: 10px 22px;
@@ -39,11 +34,6 @@
   border: none;
   box-shadow: 0px 4px 45px 0px #0000002E;
 }
-
-.cta-2 span {
-  font-size: 1.125rem;
-}
-
 .img-star-prod {
   display: flex;
   justify-content: end;
@@ -65,17 +55,17 @@
     text-align: center;
   }
   .prod-text h3 {
-    font-size: 1.863rem; 
+    font-size: 1.625rem; /*26px*/
   }
   .prod-text p {
-    font-size: 1rem;
+    font-size: 1rem; /*16px*/
   }
   .img-resp { 
     display: flex;
     justify-content: center;
   }
   .cta-2 span {
-    font-size: 1rem;
+    font-size: 1rem; /*16px*/
   }
 }
 
@@ -88,23 +78,23 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap:20px;
+    gap: 20px;
   }
   .prod-text{
     text-align: center;
   }
   .prod-text h3 {
-    font-size: 2rem;
+    font-size: 1.75rem; /*28px*/
   }
   .prod-text p {
-    font-size: 1rem;
+    font-size: 1rem; /*16px*/
   }
   .img-resp {
     display: flex;
     justify-content: center;
   }
   .cta-2 span {
-    font-size: 1rem;
+    font-size: 1rem; /*16px*/
   }
 }
 /*Responsive*/
@@ -116,26 +106,47 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap:20px;
+    gap: 20px;
   }
   .prod-text{
     text-align: center;
   }
   .prod-text h3 {
-    font-size: 2rem;
+    font-size: 1.875rem; /*30px*/
   }
   .prod-text p {
-    font-size: 1rem;
+    font-size: 1rem; /*16px*/
   }
   .img-resp {
     display: flex;
     justify-content: center;
   }
   .cta-2 span {
-    font-size: 1rem;
+    font-size: 1.125rem; /*18px*/
   }
 }
 
-@media (min-width: 1200px) {
-  
+
+@media (min-width: 1200px) and (max-width: 1399.99px) {
+  .prod-text h3 {
+    font-size: 2rem; /*32px*/
+  }
+  .prod-text p {
+    font-size: 1.125rem; /*18px*/
+  }
+  .cta-2 span {
+    font-size: 1.3rem; /*20.8px*/
+  }
+}
+
+@media (min-width: 1400px) {
+  .prod-text h3 {
+    font-size: 2.5rem; /*40px*/
+  }
+  .prod-text p {
+    font-size: 1.3rem; /*20.8px*/
+  }
+  .cta-2 span {
+    font-size: 1.125rem; /*18px*/
+  }
 }
