--- a/css/quality.css
+++ b/css/quality.css
@@ -1,54 +1,52 @@
 /************   quality    *************/
 
 .cont-height-5{
-    min-height: 100vh;
-    display: flex;
-    flex-direction: row;
-    padding: 4rem 3rem;
-  }
-  .frame-37{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 3rem;
-  }
-  .qt-text h3{
-    font-family: var(--font-primary);
-    font-size: 2.5rem;
-    color: var(--brown);
-    line-height: 1.3;
-  }
-  .qt-text p, .qt-card-text p {
-    font-family: var(--font-secondary);
-    font-size: 1rem;
-    color: var(--black);
-    margin: 0;
-    line-height: 1.8;
-  }
-  .qt-card-text h4{
-    font-family: var(--font-primary);
-    font-size: 1.25rem;
-    color: var(--brown);
-    line-height: 1.3;
-  }
-  .qt-card-text{
-    width: 20rem;
-    margin:0;
-  }
-  .qt-flex{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-start;
-    gap: 15px;
-    height: fit-content;
-  }
-  .qt-bloque-flex{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 20px;
-  }
+  min-height: 100vh;
+  display: flex;
+  flex-direction: row;
+  padding: 4rem 3rem;
+}
+.frame-37{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 3rem;
+}
+.qt-text h3{
+  font-family: var(--font-primary);
+  color: var(--brown);
+  line-height: 1.3;
+}
+.qt-text p, .qt-card-text p {
+  font-family: var(--font-secondary);
+  font-size: 1rem; /*16px*/
+  color: var(--black);
+  margin: 0;
+  line-height: 1.8;
+}
+.qt-card-text h4{
+  font-family: var(--font-primary);
+  color: var(--brown);
+  line-height: 1.3;
+}
+.qt-card-text{
+  width: 20rem;
+  margin:0;
+}
+.qt-flex{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 15px;
+  height: fit-content;
+}
+.qt-bloque-flex{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 20px;
+}
 
  /* Responsive */
 @media (max-width: 575.99px) {
@@ -56,11 +54,50 @@
     flex-direction: column;
     gap: 3rem;
   }
+  .qt-text h3{
+    font-size: 1.875rem /*30px*/
+  }
+  .qt-card-text h4{
+    font-size: 1rem; /*16px*/ 
+  }
 }
 
 @media (min-width: 576px) and (max-width: 991.99px) {
   .cont-height-5{
     flex-direction: column;
     gap: 3rem;
+  }
+  .qt-text h3{
+    font-size: 2rem; /*32px*/
+  }
+  .qt-card-text h4{
+    font-size: 1rem; /*16px*/
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1199.99px) {
+  .qt-text h3{
+    font-size: 2.125rem; /*34px*/
+  }
+  .qt-card-text h4{
+    font-size: 1rem; /*16px*/
+  }
+}
+
+@media (min-width: 1200px) and (max-width: 1399.99px) {
+  .qt-text h3{
+    font-size: 2.25rem /*36px*/
+  }
+  .qt-card-text h4{
+    font-size: 1.125rem; /*18px*/
+  }
+}
+
+@media (min-width: 1400px) {
+  .qt-text h3{
+    font-size: 2.5rem; /*40px*/
+  }
+  .qt-card-text h4{
+    font-size: 1.25rem; /*20px*/
   }
 }
