--- a/css/services.css
+++ b/css/services.css
@@ -7,7 +7,6 @@
 
 .services-title {
   font-family: var(--font-primary);
-  font-size: 4rem; 
   font-weight: 400;
   color: var(--brown);
 }
@@ -34,21 +33,18 @@
 
 .cards-text h3 {
   font-family: var(--font-primary);
-  font-size: 1.5rem;
   font-weight: 400;
   color: var(--grey);
 }
 
 .cards-text p {
   font-family: var(--font-secondary);
-  font-size: 1rem;
   font-weight: 400;
   color: var(--black);
 }
 
 .services-btn {
   font-family: var(--font-secondary);
-  font-size: 1.125rem;
   font-weight: 600;
   color: var(--brown);
   position: relative;
@@ -69,22 +65,95 @@
 /* Responsive */
 @media (max-width: 575.99px) {
   .srv-flex {
-      flex-direction: column;
-      align-items: center;
-      gap: 2rem; 
+    flex-direction: column;
+    align-items: center;
+    gap: 3rem; 
   }
   .services-title {
     font-size: 2rem; 
+  }
+  .cards-text h3 {
+    font-size: 1.125rem; /*18px*/
+  }
+  
+  .cards-text p {
+    font-size: 1rem; /*16px*/
+  }
+  
+  .services-btn {
+    font-size: 1.125rem; /*18px*/
   }
 }
 
 @media (min-width: 576px) and (max-width: 991.99px) {
   .srv-flex {
-      flex-direction: column;
-      align-items: center;
-      gap: 2rem; 
-    }
+    flex-direction: column;
+    align-items: center;
+    gap: 3rem; 
+  }
   .services-title {
     font-size: 3rem; 
+  }
+  .cards-text h3 {
+    font-size: 1.25rem; /*20px*/
+  }
+  
+  .cards-text p {
+    font-size: 1rem; /*16px*/
+  }
+  
+  .services-btn {
+    font-size: 1.125rem; /*18px*/
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1199.99px) {
+  .services-title {
+    font-size: 3.5rem; /*56px*/
+  }
+  .cards-text h3 {
+    font-size: 1.375rem; /*22px*/
+  }
+  
+  .cards-text p {
+    font-size: 1rem; /*16px*/
+  }
+  
+  .services-btn {
+    font-size: 1.125rem; /*18px*/
+  }
+}
+
+@media (min-width: 1200px) and (max-width: 1399.99px) {
+  .services-title {
+    font-size: 3.75rem; /*60px*/
+  }
+  .cards-text h3 {
+    font-size: 1.375rem; /*22px*/
+  }
+  
+  .cards-text p {
+    font-size: 1rem; /*16px*/
+  }
+  
+  .services-btn {
+    font-size: 1.125rem; /*18px*/
+  }
+}
+
+@media (min-width: 1400px) {
+  .services-title {
+    font-size: 4rem; /*64px*/
+  }
+  .cards-text h3 {
+    font-size: 1.5rem; /*24px*/
+  }
+  
+  .cards-text p {
+    font-size: 1rem; /*16px*/
+  }
+  
+  .services-btn {
+    font-size: 1.125rem; /*18px*/
   }
 }
