--- a/css/testimonials.css
+++ b/css/testimonials.css
@@ -1,30 +1,28 @@
 /************   testimonials    *************/
 
 .cont-height-6{
-    background-image: url("../assets/img/Testimonials.png");
-    background-repeat: no-repeat;
-    background-position-x: center;
-    background-position-y: center;
-    min-height: 100vh;
-  }
+  background-image: url("../assets/img/Testimonials.png");
+  background-repeat: no-repeat;
+  background-position-x: center;
+  background-position-y: center;
+  min-height: 100vh;
+}
   
-  .test-text{
-    font-family: var(--font-primary);
-    color: var(--brown);
-    font-size: 2.5rem; /*40px;*/
-    text-align: center;
-  }
-  .test-client{
-    font-family: var(--font-secondary);
-    color:var(--black);
-    font-size: 2rem; /*32px;*/
-    margin: 0;
-  }
-  .circle-icon{
-    background-color: var(--brown);
-    border-radius: 50px;
-    padding: 12px;
-  }
+.test-text{
+  font-family: var(--font-primary);
+  color: var(--brown);
+  text-align: center;
+}
+.test-client{
+  font-family: var(--font-secondary);
+  color:var(--black);
+  margin: 0;
+}
+.circle-icon{
+  background-color: var(--brown);
+  border-radius: 50px;
+  padding: 12px;
+}
 
 /* Responsive */
 @media (max-width: 575.99px) {
@@ -42,5 +40,32 @@
   }
   .test-client{
     font-size: 1.075rem; /*17.2px;*/
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1199.99px) {
+  .test-text{
+    font-size: 2.25rem; /*36px*/ 
+  }
+  .test-client{
+    font-size: 1.563rem; /*25px*/
+  }
+}
+
+@media (min-width: 1200px) and (max-width: 1399.99px) {
+  .test-text{
+    font-size: 2.375rem; /*38px*/
+  }
+  .test-client{
+    font-size: 1.625rem; /*26px*/
+  }
+}
+
+@media (min-width: 1400px) {
+  .test-text{
+    font-size: 2.5rem; /*40px;*/
+  }
+  .test-client{
+    font-size: 2rem; /*32px;*/
   }
 }
