--- a/css/about.css
+++ b/css/about.css
@@ -3,10 +3,11 @@
 .cont-height-4{
   background-color: var(--light-brown);
   background-image: url("../assets/img/circles.png");
+  background-attachment: fixed;
   background-repeat: no-repeat;
   background-position-y: bottom;
   background-size: contain;
-  min-height: 100vh;
+  min-height: 80vh;
 }
 .text-p{
   width: 80%;
