--- a/css/styles.css
+++ b/css/styles.css
@@ -52,4 +52,21 @@ header{
   max-width: 100%;
   height: auto;
 }
+/* Responsive */
+@media (max-width: 575.99px) {
+  .img-resp img{
+    max-width: 50%;
+  }
+}
 
+@media (min-width: 576px) and (max-width: 991.99px) {
+  .img-resp img{
+    max-width: 55%;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1199.99px) {
+  .img-resp img{
+    max-width: 60%;
+  }
+}
