--- a/css/footer.css
+++ b/css/footer.css
@@ -1,11 +1,12 @@
-/************   footer    *************/
+/***footer***/
 
 .foo-cont{
   min-height: 90vh;
   background-color: var(--brown);
   padding: 4rem;
-  }
+}
 .logo-foo{
+  font-size: clamp(1.625rem, 1.293rem + 1.064vw, 2.25rem);
   font-family: var(--font-primary);
   color: var(--white);
   width: 300px;
@@ -18,6 +19,7 @@
   gap:2rem;
 }
 .bold-footer{
+  font-size: clamp(1rem, 0.867rem + 0.426vw, 1.25rem);
   font-family: var(--font-secondary);
   color: #A87A7A;
   font-weight: 600;
@@ -27,6 +29,7 @@
   list-style-type: none;
 }
 .light-footer a, .light-footer{
+  font-size: clamp(1rem, 0.867rem + 0.426vw, 1.25rem);
   font-family: var(--font-secondary);
   color: #DFD4D1;
   font-weight: 400;
@@ -39,6 +42,7 @@
   height: 90px;
 }
 .rg-fo p{
+  font-size: clamp(1rem, 0.867rem + 0.426vw, 1.25rem);
   text-align: center;
   font-family: var(--font-secondary);
   color: var(--white);
@@ -51,52 +55,15 @@
 }
 
 /* Responsive */
+
 @media (max-width: 575.99px) {
-  .logo-foo{
-    font-size: 1.625; /*26px;*/
-  }
-  .bold-footer ,.light-footer a, .light-footer, .rg-fo p{
-    font-size: 1rem; /*16px*/
-  }
   .ul-flex{
     flex-direction: column;
   }
 }
 
 @media (min-width: 576px) and (max-width: 991.99px) {
-  .logo-foo{
-    font-size: 1.625rem; /*26px;*/
-  }
-  .bold-footer ,.light-footer a, .light-footer, .rg-fo p{
-    font-size: 1.2rem; /*19.2px*/
-  }
   .ul-flex{
     flex-direction: column;
-  }
-}
-@media (min-width: 992px) and (max-width: 1199.99px) {
-  .logo-foo{
-    font-size: 1.875rem; /*30px*/
-  }
-  .bold-footer ,.light-footer a, .light-footer, .rg-fo p{
-    font-size: 1.125rem; /*18px*/
-  }
-}
-
-@media (min-width: 1200px) and (max-width: 1399.99px) {
-  .logo-foo{
-    font-size: 2rem; /*32px*/
-  }
-  .bold-footer ,.light-footer a, .light-footer, .rg-fo p{
-    font-size: 1.125rem; /*18px*/
-  }
-}
-
-@media (min-width: 1400px) {
-  .logo-foo{
-    font-size: 2.25rem; /*36px;*/
-  }
-  .bold-footer, .light-footer a, .light-footer, .rg-fo p{
-    font-size: 1.25rem; /*20px;*/
   }
 }
