--- a/css/header.css
+++ b/css/header.css
@@ -1,4 +1,4 @@
-/************   header   *************/
+/***header***/
 
 .header-flex{
   display: flex;
@@ -6,11 +6,13 @@
   height: 85vh !important;
 }
 .header-text h1{
+  font-size: clamp(2.5rem, 1.436rem + 3.404vw, 4.5rem);
   font-family: var(--font-primary);
   font-weight: 400;
   color: var(--brown);
 }
 .header-text p{
+  font-size: clamp(1.125rem, 1.059rem + 0.213vw, 1.25rem);
   font-family: var(--font-secondary);
   font-weight: 400;
   color: black; 
@@ -32,6 +34,7 @@
 }
   
 .cta span, .cta-2 span, .cta-3 span{
+  font-size: clamp(1rem, 0.934rem + 0.213vw, 1.125rem);
   color: var(--brown);
   font-family: var(--font-secondary);
   font-weight: 600;
@@ -49,7 +52,9 @@
 .modal-title{
   margin: 0 !important;
 }
+
 /*Responsive*/
+
 @media (width < 575.99px){
   .header-img{
     display: none;
@@ -57,19 +62,9 @@
   .header-flex{
     justify-content: center;
   }
-  .header-text h1{
-    font-size: 3rem; 
-  }
   .cta-arrow{
     width: 2.5rem;
     height: 2.5rem;
-  }
-  .header-text p{
-    font-size: 1.125rem; /* 18px */
-  }
-  
-  .cta span, .cta-3 span{
-    font-size: 1rem; /* 16px */
   }
 }
 
@@ -80,16 +75,6 @@
   .header-flex{
     justify-content: center;
   }
-  .header-text h1{
-    font-size: 3.438rem; /*55px*/ 
-  }
-  .header-text p{
-    font-size: 1.125rem; /* 18px */
-  }
-  
-  .cta span, .cta-3 span{
-    font-size: 1rem; /* 16px */
-  }
 }
 
 @media (min-width: 992px) and (max-width: 1199.99px){
@@ -99,19 +84,9 @@
     justify-content: center;
     align-items: center;
   }
-  .header-text h1{
-    font-size: 3.75rem; /*60px*/
-  }
   .cta-arrow{
     width: 2.8rem;
     height: 2.8rem;
-  }
-  .header-text p{
-    font-size: 1.125rem; /* 18px */
-  }
-  
-  .cta span, .cta-3 span{
-    font-size: 1rem; /* 16px */
   }
 }
 
@@ -122,17 +97,6 @@
     justify-content: center;
     align-items: center;
   }
-  .header-text h1{
-    font-size: 4.063rem; /*65px*/
-  }
-  
-  .header-text p{
-    font-size: 1.25rem; /* 20px */
-  }
-  
-  .cta span, .cta-3 span{
-    font-size: 1.125rem; /* 18px */
-  }
 }
 
 @media (min-width: 1400px) {
@@ -141,16 +105,5 @@
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  .header-text h1{
-    font-size: 4.5rem; /*72px*/
-  }
-  
-  .header-text p{
-    font-size: 1.25rem; /* 20px */
-  }
-  
-  .cta span, .cta-3 span{
-    font-size: 1.125rem; /* 18px */
   }
 }
