--- a/css/header.css
+++ b/css/header.css
@@ -27,6 +27,7 @@
   box-shadow: 0px 4px 45px 0px #0000002E;
   font-size: 1rem;
   transition: ease-in .1s;
+  text-decoration: none;
 }
 .cta:hover, .cta-2:hover, .cta-3:hover{
   cursor: pointer;
@@ -38,6 +39,7 @@
   color: var(--brown);
   font-family: var(--font-secondary);
   font-weight: 600;
+  text-decoration: none;
 }
 .cta-arrow{
   background-color: var(--light-brown);
