--- a/css/products.css
+++ b/css/products.css
@@ -11,6 +11,9 @@
 }
 .padding-prod{
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 .prod-text h3 {
   font-size: clamp(1.563rem, 1.064rem + 1.596vw, 2.5rem);
@@ -36,6 +39,7 @@
   border: none;
   box-shadow: 0px 4px 45px 0px #0000002E;
   transition: ease-in .1s;
+  text-decoration: none;
 }
 
 .img-star-prod {
@@ -53,7 +57,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap:20px;
+    gap: 20px;
   }
   .prod-text{
     text-align: center;
