--- a/css/pages/about-me.css
+++ b/css/pages/about-me.css
@@ -1,5 +1,5 @@
 .bg-abt{
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../assets/img/ab-hea.jpg");
+  background-image: url("../../assets/img/banner-img2.png");
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
