--- a/css/products.css
+++ b/css/products.css
@@ -21,6 +21,7 @@
   color: var(--brown);
   font-weight: 400;
   line-height: 1.8; 
+  margin:0;
 }
 .prod-text p, .gal-p {
   font-size: clamp(1rem, 0.84rem + 0.511vw, 1.1rem);
