--- a/css/header.css
+++ b/css/header.css
@@ -3,7 +3,7 @@
 .header-flex{
   display: flex;
   align-items: center;
-  height: 85vh !important;
+  min-height: 95vh !important;
 }
 .header-text h1{
   font-size: clamp(2.5rem, 1.436rem + 3.404vw, 4.5rem);
